--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,10 +9,19 @@
     android:id="@+id/mainFragment"
     android:name="com.ebookfrenzy.navigationdemo.ui.main.MainFragment"
     android:label="main_fragment"
-    tools:layout="@layout/main_fragment"/>
+    tools:layout="@layout/main_fragment">
+  <action
+      android:id="@+id/mainToSecond"
+      app:destination="@id/secondFragment"/>
+  </fragment>
   <fragment
     android:id="@+id/secondFragment"
     android:name="com.ebookfrenzy.navigationdemo.SecondFragment"
     android:label="fragment_second"
-    tools:layout="@layout/fragment_second"/>
+    tools:layout="@layout/fragment_second">
+    <argument
+      android:name="message"
+      app:argType="string"
+      android:defaultValue="No message"/>
+  </fragment>
 </navigation>
